# bazel-bug

confusing-configs/: .bazelrc  BUILD  MODULE.bazel  bazel-bin  bazel-confusing-configs  bazel-out  bazel-testlogs  transitions.bzl
confusing-configs/app/: BUILD  main.cpp
confusing-configs/lib/: BUILD  lib.cpp
env_vars/: WORKSPACE  bazel-bazel-bug  bazel-bin  bazel-out  bazel-testlogs  main.bzl
not-quite-identical/: .bazelrc  BUILD.bazel  MODULE.bazel  bug_repro.bzl  verify_bug.sh
not-quite-identical/impl/: BUILD.bazel  stub.cpp
remote_reset/: .bazelrc  BUILD.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-remote_reset  bazel-testlogs  external.bzl
repeated_error/: WORKSPACE  main.bzl  output.md
